# icetainer

./: .gitignore  Makefile  flake.nix  make-qcow2.nix  start-image.sh  startvm.sh  stasis-entrypoint.nix  vm-config.nix
.github/workflows/: docker.yml  makefile.yml
icetainer-tools/: Cargo.toml  flake.nix
icetainer-tools/src/: main.rs
stasis-tools/: Cargo.toml  flake.nix
stasis-tools/src/: main.rs
